Fix sizing in cards: Card width modified and spacing

--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ main {
     position: relative;
     scroll-snap-align: center;
     width: 70%;
-    min-width: 230px;
+    min-width: 190px;
     max-width: 300px;
     height: 250px;
     margin: 50px auto 0;
@@ -425,8 +425,8 @@ main {
 }
 
 #center-card{
-    margin-left: 20px ;
-    margin-right: 20px;
+    margin-left: 10px ;
+    margin-right: 10px;
 }
 
 .price-section-card-container__card-title{
